# AbstractionLayer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  abstractionLayer.py  darwin.cmake  desktop.cmake  esp.cmake  linux.cmake  macos.cmake
AbstractionLayerTesting/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
AbstractionLayerTesting/Example/: CMakeLists.txt  CTestTestfile.cmake  ExampleTest.cpp  cmake_install.cmake
AbstractionLayerTesting/Ip/: CMakeLists.txt  CTestTestfile.cmake  CbtIpTest.cpp  IpTest.cpp  cbtIpTest.Mach-O  cmake_install.cmake
AbstractionLayerTesting/OperatingSystem/: CMakeLists.txt  CTestTestfile.cmake  OperatingSystemTest.cpp  cbtOperatingSystemTest.Mach-O  cmake_install.cmake
AbstractionLayerTesting/Serialization/: CMakeLists.txt  CTestTestfile.cmake  CbtSerializationTest.cpp  cbtSerializationTest.Mach-O  cmake_install.cmake
AbstractionLayerTesting/Storage/: CMakeLists.txt  CTestTestfile.cmake  CbtStorageTest.cpp  StorageTest.cpp  cbtStorageTest.Mach-O  cmake_install.cmake
AbstractionLayerTesting/Testing/Temporary/: CTestCostData.txt
AbstractionLayerTesting/Uart/: CMakeLists.txt  CTestTestfile.cmake  UartTest.cpp  cbtUartTest.Mach-O  cmake_install.cmake
Abstractions/: README.md
Abstractions/Cryptography/: CryptographyAbstraction.hpp
Abstractions/Error/: Error.hpp
Abstractions/Hardware/: GpioAbstraction.hpp  UartAbstraction.hpp
Abstractions/Ip/: IpClientAbstraction.hpp  IpServerAbstraction.hpp
Abstractions/Network/: CMakeLists.txt  CellularAbstraction.hpp  NetworkAbstraction.hpp  WifiAbstraction.hpp
Abstractions/OperatingSystem/: OperatingSystemAbstraction.hpp
Abstractions/Protocols/: CMakeLists.txt  IcCommunicationProtocol.hpp
Abstractions/Serialization/: SerializationAbstraction.hpp
Abstractions/Storage/: CMakeLists.txt  FileAbstraction.hpp  StorageAbstraction.hpp
Abstractions/Types/: CMakeLists.txt
Applications/: README.md
Applications/ChainOfResponsibility/: CMakeLists.txt  CbtChainOfResponsibility.cpp  CbtChainOfResponsibility.hpp  CbtCommandObject.hpp  ChainOfResponsibility.cpp  ChainOfResponsibility.hpp  CommandObject.hpp  README.md
Applications/Event/: CMakeLists.txt  EventQueue.cpp  EventQueue.hpp
Applications/Logging/: CMakeLists.txt  Log.hpp
Cryptography/: CMakeLists.txt  CryptographyAbstraction.hpp
Error/: CMakeLists.txt  CbtError.hpp  Error.hpp
Event/: CMakeLists.txt  CbtEventQueue.hpp  EventQueue.hpp
Hardware/: CMakeLists.txt  CbtGpioAbstraction.hpp  CbtUartAbstraction.hpp  CbtWatchdogAbstraction.hpp  GpioAbstraction.hpp  UartAbstraction.hpp  WatchdogAbstraction.hpp
Ip/: CMakeLists.txt  CbtIpClientAbstraction.hpp  CbtIpServerAbstraction.hpp  IpClientAbstraction.hpp  IpServerAbstraction.hpp
Logging/: CMakeLists.txt  CbtLoggingAbstraction.hpp  LoggingAbstraction.hpp
Modules/: README.md
Modules/Cryptography/Darwin/: CMakeLists.txt  CryptographyModule.hpp
Modules/Cryptography/Esp/: CMakeLists.txt  CryptographyModule.cpp  CryptographyModule.hpp
Modules/Cryptography/Linux/: CMakeLists.txt  CryptographyModule.cpp  CryptographyModule.hpp
Modules/Cryptography/MacOs/: CMakeLists.txt  CryptographyModule.cpp  CryptographyModule.hpp
Modules/Cryptography/None/: CMakeLists.txt  CryptographyModule.cpp  CryptographyModule.hpp
Modules/Error/Errno/: CMakeLists.txt  ErrorModule.cpp
Modules/Error/Esp/: CMakeLists.txt  ErrorModule.cpp
Modules/Error/None/: CMakeLists.txt  ErrorModule.cpp
Modules/Ip/Esp/: CMakeLists.txt  IpClientModule.cpp  IpClientModule.hpp
Modules/Ip/None/: CMakeLists.txt
Modules/Ip/Posix/: CMakeLists.txt  IpClientModule.cpp  IpClientModule.hpp  IpServerModule.cpp  IpServerModule.hpp
Modules/Ip/QuectelEC21A/: CMakeLists.txt  IpCellularClientModule.cpp  IpCellularClientModule.hpp  IpCellularServerModule.cpp  IpClientModule.cpp  IpClientModule.hpp  IpServerModule.hpp
Modules/Ip/UbloxSaraU201/: CMakeLists.txt  IpCellularClientModule.cpp  IpCellularClientModule.hpp  IpCellularServerModule.hpp  IpClientModule.cpp  IpClientModule.hpp  IpServerModule.cpp
Modules/Logging/Esp/: CMakeLists.txt  LoggerModule.cpp  LoggerModule.hpp
Modules/Logging/None/: CMakeLists.txt  LoggerModule.cpp  LoggerModule.hpp
Modules/Logging/stdlib/: CMakeLists.txt  LoggerModule.cpp  LoggerModule.hpp
Modules/MemoryManagement/Default/: CMakeLists.txt
Modules/MemoryManagement/Esp/: CMakeLists.txt  MemoryConfigModule.cpp
Modules/OperatingSystem/Darwin/: CMakeLists.txt  OperatingSystemModule.cpp  OperatingSystemModule.hpp
Modules/OperatingSystem/Esp/: CMakeLists.txt  OperatingSystemModule.cpp  OperatingSystemModule.hpp
Modules/OperatingSystem/Linux/: CMakeLists.txt  OperatingSystemModule.cpp  OperatingSystemModule.hpp
Modules/OperatingSystem/MacOs/: CMakeLists.txt  OperatingSystemModule.cpp
Modules/OperatingSystem/Posix/: CMakeLists.txt  OperatingSystemModule.cpp  OperatingSystemModule.hpp
Modules/Serialization/ClearBlueCloudProtobuf/: CMakeLists.txt  SerializationModule.cpp  SerializationModule.hpp
Modules/Serialization/None/: CMakeLists.txt  SerializationModule.cpp  SerializationModule.hpp
Modules/Storage/Darwin/: CMakeLists.txt  StorageModule.cpp  StorageModule.hpp
Modules/Storage/Esp/: CMakeLists.txt  FileModule.cpp  FileModule.hpp  StorageModule.cpp  StorageModule.hpp
Modules/Storage/Linux/: CMakeLists.txt  StorageModule.cpp  StorageModule.hpp
Modules/Storage/None/: CMakeLists.txt  FileModule.cpp  (+3 more)
Network/: CMakeLists.txt  CbtNetworkAbstraction.hpp  NetworkAbstraction.hpp
OperatingSystem/: CMakeLists.txt  CbtOperatingSystemAbstraction.hpp  OperatingSystemAbstraction.hpp
Protocols/: CMakeLists.txt  CbtCommunicationProtocol.hpp  CbtIcCommunicationProtocol.hpp  CommunicationProtocol.hpp
Serialization/: CMakeLists.txt  CbtSerializationAbstraction.hpp  SerializationAbstraction.hpp
Storage/: CMakeLists.txt  CbtFileAbstraction.hpp  CbtStorageAbstraction.hpp  StorageAbstraction.hpp
Types/: CMakeLists.txt  CbtTypes.hpp  Types.hpp
Utilities/: CMakeLists.txt  Error.hpp  Global.hpp  Types.hpp
(+73 files in other folders)
