target_sources(${PROJECT_NAME}${EXECUTABLE_SUFFIX}
PRIVATE FILE_SET headers TYPE HEADERS BASE_DIRS ${CMAKE_CURRENT_LIST_DIR} FILES
  EventQueue.hpp
)

add_library(Event STATIC
  EventQueue.cpp
)

target_include_directories(Event PUBLIC ${CMAKE_CURRENT_LIST_DIR})

target_link_libraries(Event PUBLIC OperatingSystem)
target_link_libraries(Event PUBLIC Utilities)
target_link_libraries(${PROJECT_NAME}${EXECUTABLE_SUFFIX} PUBLIC Event)

if (ESP_PLATFORM)
  target_include_directories(Event PRIVATE $<TARGET_PROPERTY:__idf_main,INTERFACE_INCLUDE_DIRECTORIES>)
  target_include_directories(__idf_main PUBLIC ${CMAKE_CURRENT_LIST_DIR})
else()
  target_include_directories(${PROJECT_NAME}${EXECUTABLE_SUFFIX} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
endif()